JsonTypeExtension refactoring